--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
-p{
-    margin-left: 10px;
-    margin-top: 10px;
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
-    width: 150px;
-
+.btn, btn-primary{
+    background-color: grey;
+    width: 100%;
 }
-#listaProductos{
+#guitarras-electricas{
     display: flex;
+}
+.card{
+    margin-right: 10px;
+}
+#carrito p{
+    background-color: gray;
+    border-radius: 5px;
+    width: 300px;
+    border: 1px solid black;
+    text-align: center;
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
